--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,12 @@
 spring.application.name=QuickTix
 spring.profiles.active=dev
+
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operations-sorter=method
+springdoc.swagger-ui.tags-sorter=alpha
+springdoc.swagger-ui.try-it-out-enabled=true
+springdoc.swagger-ui.filter=true
+springdoc.swagger-ui.syntax-highlight.theme=monokai
+springdoc.swagger-ui.doc-expansion=none
+springdoc.swagger-ui.default-models-expand-depth=-1
